# AI-Powered-Review-Intelligence-Dashboard

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  requirements.txt  train_model.py
.github/workflows/: ci.yml
app/: __init__.py  orchestrator.py  requirements.txt  streamlit_app.py
app/models/: bow_model.pkl  vectorizer.pkl
data/: sample_reviews.csv
docs/: index.html
notebooks/: exploration.ipynb
tests/: test_orchestrator.py
